# duct.py

./: .coveragerc  .gitignore  .readthedocs.yaml  .travis.yml  README.md  appveyor.yml  ci.py  duct.py  e.py  gotchas.md  pyproject.toml  setup.py  spec.md  subprocess_sleepy.py  test.py  test_duct.py  tox.ini  tubes.py
.github/workflows/: ci.yml
docs/source/: conf.py  index.rst
